added routing and grid

--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ h1 {
 h2 {
   font-size: 28px;
   font-weight: bold;
-  color: #495E57;
+  color: #F4CE14;
 }
 
 h3 {
@@ -117,3 +117,4 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
+
