added and styled login and about

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,8 +1,11 @@
 .footer {
+    position: sticky;
+    bottom: 0;
     width: 100%;
-    background-color: #eee;
-    border-top: 1px solid #ccc;
-    text-align: center;
-    font-size: 18px;
-    height: 50px;
-}
+    height: 60px;
+    background-color: #495E57;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
