--- a/src/css/Homepage.css
+++ b/src/css/Homepage.css
@@ -2,22 +2,28 @@
 .flex-container {
   display: flex;
   flex-direction: column;
-  height: 1500px;
+  height: 100%;
 }
 .flex-item-1 {
   flex: 2;
 }
 
 .flex-item-2 {
-  flex: 1;
+  flex: 3;
+  justify-content: center; /* align items horizontally */
+  align-items: center; /* align items vertically */
+  background-color: rgba(200, 200, 200, 0.5);
+  min-height: 700px;
 }
 
 .flex-item-3 {
-  flex: 3;
+  flex: 1;
+  background-color: #495E57;
 }
 
 .flex-item-4 {
   flex: 1;
+  background-color: rgba(200, 200, 200, 0.5);
 }
 
 /* Vertical grid */
@@ -25,9 +31,9 @@
   display: flex;
   flex-direction: row;
   height: 100%;
-  background-color: #495E57;
 }
 .vertical-flex-item {
+  background-color: #495E57;
   font-size: 18px;
 }
 .vertical-flex-item-center {
@@ -37,14 +43,14 @@
   flex: 1;
 }
 .reserveButton {
-    margin-top: 50px;
-    color: #495E57;
-    font-size: 18px;
-    font-weight: bold;
-    height: 50px;
-    border-radius: 10px;
-    border: 0px;
-    background-color: #F4CE14;
+  margin-top: 50px;
+  color: #495E57;
+  font-size: 18px;
+  font-weight: bold;
+  height: 50px;
+  border-radius: 10px;
+  border: 0px;
+  background-color: #F4CE14;
 }
 .imgPasta {
   object-fit: cover;
@@ -58,4 +64,53 @@
 }
 .vertical-flex-item-center > h4 {
   color: black;
+}
+/* Vertical grid */
+.menuitem-vertical-flex-container {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+.menuitem-vertical-flex-item {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+.headingMiddle {
+  margin-top: 50px;
+  text-align: center;
+}
+.menuItemComponent {
+  justify-content: center; /* align items horizontally */
+  align-items: center;
+}
+/* Vertical grid */
+.customer-vertical-flex-container {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+.customer-vertical-flex-item {
+  font-size: 18px;
+  flex: 1;
+}
+.flex-item-3 > h1 {
+  color: #F4CE14;
+}
+/* Vertical grid */
+.about-vertical-flex-container {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+.about-vertical-flex-item {
+  display: flex;
+  font-size: 18px;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+.about-vertical-flex-item > p {
+  margin-bottom: 50px;
 }
