--- a/src/css/BookingForm.css
+++ b/src/css/BookingForm.css
@@ -30,3 +30,15 @@ input[type="submit"] {
   font-weight: bold;
   cursor: pointer;
 }
+
+.bookingForm-flex-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #495e57;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.bookingForm-flex-item-1 {
+  flex: 1;
+}
